--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           
       <script src="sketch.js" type="text/javascript"></script>
       <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
-
+      <a href="main.html">Visit plot</a> 
   </head>
   
   <body>
