--- a/browser.html
+++ b/browser.html
@@ -11,10 +11,7 @@
 	</head>
 	<body>
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="../../code/highcharts.js"></script>
-<script src="../../code/modules/exporting.js"></script>
-<script src="../../code/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/highcharts.src.js"></script>		
 
 <div id="container" style="width: 100%; height: 500px; margin: 0 auto"></div>
 
