--- a/browser.html
+++ b/browser.html
@@ -12,9 +12,9 @@
 	<body>
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="code/highcharts.js"></script>
-<script src="code/modules/exporting.js"></script>
-<script src="code/modules/export-data.js"></script>
+<script src="highcharts.js"></script>
+<script src="exporting.js"></script>
+<script src="export-data.js"></script>
 		
 <div id="container" style="width: 100%; height: 500px; margin: 0 auto"></div>
 
