--- a/browser.html
+++ b/browser.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Highcharts Example</title>
+		<title>Browser market shares in January, 2018</title>
 
 		<style type="text/css">
 
