--- a/browser.html
+++ b/browser.html
@@ -12,9 +12,9 @@
 	<body>
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="../../code/highcharts.js"></script>
-<script src="../../code/modules/exporting.js"></script>
-<script src="../../code/modules/export-data.js"></script>
+<script src="/Highcharts-6.1.0/code/highcharts.js"></script>
+<script src="/Highcharts-6.1.0/code/modules/exporting.js"></script>
+<script src="/Highcharts-6.1.0/code/modules/export-data.js"></script>
 
 <div id="container" style="width: 100%; height: 500px; margin: 0 auto"></div>
 
